--- a/.github/workflows/security_veracode_pipeline_scan.yml
+++ b/.github/workflows/security_veracode_pipeline_scan.yml
@@ -3,6 +3,10 @@ on:
   workflow_dispatch:
   schedule:
     - cron: "19 6 * * MON-FRI" # Every weekday
+permissions:
+  contents: read
+  actions: read
+  security-events: write
 jobs:
   security-veracode-pipeline-scan:
     name: Project security veracode pipeline scan
