--- a/.github/workflows/security_veracode_policy_scan.yml
+++ b/.github/workflows/security_veracode_policy_scan.yml
@@ -5,6 +5,18 @@ on:
     - cron: "34 6 * * 1" # Every Monday
 
 jobs:
+  create-artifact:
+    name: Build the artifact for veracode to scan
+    uses: ministryofjustice/hmpps-github-actions/.github/workflows/gradle_verify.yml@v2 # WORKFLOW_VERSION
+    with:
+      gradle-command: 'BUILD_NUMBER=veracode ./gradlew assemble'
+      upload-build-artifacts: true
+      build-artifact-name: 'build-results'
+      upload-test-artifacts: false
+      java-version: "25"
+    permissions:
+      contents: read
+      actions: read
   security-veracode-policy-check:
     permissions:
       contents: read
@@ -14,5 +26,7 @@ jobs:
     uses: ministryofjustice/hmpps-github-actions/.github/workflows/security_veracode_policy_scan.yml@v2 # WORKFLOW_VERSION
     with:
       channel_id: ${{ vars.SECURITY_ALERTS_SLACK_CHANNEL_ID || 'NO_SLACK' }}
-      java_version: "25"
+      veracode_package_artifact_name: 'build-results'
+      veracode_artifact_name: '${{ github.event.repository.name }}-veracode.jar'
     secrets: inherit
+    needs: create-artifact
