--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,8 +5,6 @@ info.app:
 spring:
   application:
     name: hmpps-template-kotlin
-  codec:
-    max-in-memory-size: 10MB
 
   jackson:
     date-format: "yyyy-MM-dd HH:mm:ss"
@@ -23,6 +21,9 @@ spring:
         provider:
           hmpps-auth:
             token-uri: ${hmpps-auth.url}/oauth/token
+  http:
+    codecs:
+      max-in-memory-size: 10MB
 
 server:
   port: 8080
