feat(pre-commit): added renovate

--- a/renovate.json
+++ b/renovate.json
@@ -12,6 +12,10 @@
     {
       "matchManagers": ["github-actions"],
       "fileMatch": ["^\\.github/workflows/.*\\.yml$"]
+    },
+    {
+      "matchManagers": ["pre-commit"],
+      "groupName": "all pre-commit dependencies"
     }
   ]
 }
