SDIT-3215: 🔒️ Only enable spring docs for dev

--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -7,3 +7,9 @@ management.endpoint:
 
 hmpps-auth:
   url: "http://localhost:8090/auth"
+
+springdoc:
+  api-docs:
+    enabled: true
+  swagger-ui:
+    enabled: true
