SDIT-3297 docker compose does not build this application docker image

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,6 @@
 services:
   hmpps-template-kotlin:
-    build:
-      context: .
+    image: ghcr.io/ministryofjustice/hmpps-template-kotlin:latest
     networks:
       - hmpps
     container_name: hmpps-template-kotlin
