--- a/helm_deploy/hmpps-template-kotlin/values.yaml
+++ b/helm_deploy/hmpps-template-kotlin/values.yaml
@@ -24,7 +24,7 @@ generic-service:
     # Check resources.limits.memory is set appropriately.
     #
     # Percentage-based example:
-    #   JAVA_TOOL_OPTIONS: "-XX:+ExitOnOutOfMemoryError -XX:MaxRAMPercentage=75.0"
+    #   JAVA_TOOL_OPTIONS: "-XX:+ExitOnOutOfMemoryError -XX:InitialRAMPercentage=50.0 -XX:MaxRAMPercentage=75.0"
     #
     # Fixed memory example:
     #   JAVA_TOOL_OPTIONS: "-XX:+ExitOnOutOfMemoryError -Xms512m -Xmx1024m"
