--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,8 +6,10 @@ spring:
   application:
     name: hmpps-template-kotlin
 
-  jackson:
-    date-format: "yyyy-MM-dd HH:mm:ss"
+#  This jackson configuration is only applied for java.util.Date.
+#  It is ignored for LocalDateTime, and therefore unnecessary for most projects
+#  jackson:
+#    date-format: "yyyy-MM-dd HH:mm:ss"
 
   security:
     oauth2:
@@ -22,6 +24,9 @@ spring:
   http:
     codecs:
       max-in-memory-size: 10MB
+  web:
+    error:
+      include-message: always
 
 server:
   port: 8080
@@ -34,9 +39,6 @@ server:
       protocol-header: x-forwarded-proto
       internal-proxies: 10\.\d{1,3}\.\d{1,3}\.\d{1,3}|192\.168\.\d{1,3}\.\d{1,3}|169\.254\.\d{1,3}\.\d{1,3}|127\.\d{1,3}\.\d{1,3}\.\d{1,3}|172\.1[6-9]{1}\.\d{1,3}\.\d{1,3}|172\.2[0-9]{1}\.\d{1,3}\.\d{1,3}|172\.3[0-1]{1}\.\d{1,3}\.\d{1,3}|0:0:0:0:0:0:0:1|::1|100\.6[4-9]\.\d{1,3}\.\d{1,3}|100\.[7-9][0-9]{1}\.\d{1,3}\.\d{1,3}|100\.1[0-1][0-9]{1}\.\d{1,3}\.\d{1,3}|100\.12[0-7]\.\d{1,3}\.\d{1,3}
   shutdown: graceful
-  web:
-    error:
-      include-message: always
 
 management:
   endpoints:
