fileMatch isn't supported in this manager - fixing

--- a/renovate.json
+++ b/renovate.json
@@ -11,7 +11,8 @@
     },
     {
       "matchManagers": ["github-actions"],
-      "fileMatch": ["^\\.github/workflows/.*\\.yml$"]
+      "matchFileNames": ["**/.github/workflows/**/*.ya?ml"],
+      "separateMinorPatch": true
     }
   ]
 }
